// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package dm;

message QuestID {
  string id = 1;
}

message AttemptID {
  QuestID quest = 1;
  uint64 id = 2;
}

message ExecutionID {
  AttemptID attempt = 1;
  uint64 id = 2;
}

message QuestDescriptor {
  string distributor_config_name = 1;
  string json_payload = 2;
}

message MultiPropertyValue {
  repeated PropertyValue values = 1;
}

message PropertyValue {
  // reserve 4 for floats. This is omitted because equality-comparison with
  // floats is notoriously difficult. In the initial implementation of DM,
  // payloads and results with floats will be rejected. Hopefully they're not
  // needed, and we don't need to support them.
  reserved 4;

  oneof value {
    string str = 1;
    bytes  dat = 2;
    int64  num = 3;
    bool   bin = 5;

    // Time should only be used with the start/end PropertyValues in
    // GraphQuerySearch. If specified in a filter map, it will be ignored.
    google.protobuf.Timestamp time = 6;

    google.protobuf.Empty null = 7;
  }
}

// ExecutionAuth is a tuple of the requesting ExecutionID and the activated
// ExecutionToken (see the ActivateExecution rpc).
message ExecutionAuth {
  ExecutionID id = 1;
  bytes execution_token = 2;
}
