// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/luci/luci-go/common/api/template/template.proto";
import "github.com/luci/luci-go/common/api/dm/service/v1/graph_data.proto";

package dmTemplate;

// File represents a file full of DM template definitions.
message File {
  // Template defines a single template.
  message Template {
    string distributor_config_name = 1;
    template.File.Template parameters = 2;
    template.File.Template distributor_parameters = 3;
    dm.Quest.Desc.Meta meta = 4;
  }
  map<string, Template> template = 1;
}
